// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayoutHelper should combineMenuItems 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "exact": true,
        "name": "Dashboard",
        "title": "Dashboard",
        "type": "item",
        "url": "/",
      },
      Object {
        "name": "Facts",
        "title": "Facts",
        "type": "item",
        "url": "/fact_values",
      },
    ],
    "className": "",
    "icon": "fa fa-tachometer",
    "name": "Monitor",
    "type": "sub_menu",
  },
  Object {
    "children": Array [
      Object {
        "name": "All Hosts",
        "title": "All Hosts",
        "type": "item",
        "url": "/hosts/new",
      },
    ],
    "className": "",
    "icon": "fa fa-server",
    "name": "Hosts",
    "type": "sub_menu",
  },
  Object {
    "children": Array [
      Object {
        "title": undefined,
        "type": "item",
        "url": "/nameless",
      },
      Object {
        "title": undefined,
        "type": "divider",
      },
    ],
    "className": "",
    "icon": "pficon pficon-unplugged",
    "name": "Empty",
    "type": "sub_menu",
  },
  Object {
    "children": Array [
      Object {
        "name": "Any Organization",
        "onClick": [Function],
        "title": "Any Organization",
      },
      Object {
        "name": "org1",
        "onClick": [Function],
        "title": "org1",
        "type": undefined,
      },
      Object {
        "name": "org2",
        "onClick": [Function],
        "title": "org2",
        "type": undefined,
      },
    ],
    "className": "organization-menu hidden-nav-lg",
    "icon": "fa fa-building",
    "name": "Organizations",
    "type": "sub_menu",
  },
  Object {
    "children": Array [
      Object {
        "name": "Any Location",
        "onClick": [Function],
        "title": "Any Location",
      },
      Object {
        "name": "yaml",
        "onClick": [Function],
        "title": "yaml",
        "type": undefined,
      },
      Object {
        "name": "london",
        "onClick": [Function],
        "title": "london",
        "type": undefined,
      },
      Object {
        "name": "norway",
        "onClick": [Function],
        "title": "norway",
        "type": undefined,
      },
    ],
    "className": "location-menu hidden-nav-lg",
    "icon": "fa fa-globe",
    "name": "Locations",
    "type": "sub_menu",
  },
]
`;

exports[`LayoutHelper should getActiveMenuItem(Hosts, "/hosts/new") 1`] = `
Object {
  "title": "Hosts",
}
`;

exports[`LayoutHelper should getActiveMenuItem(Monitor, null) 1`] = `
Object {
  "title": "Monitor",
}
`;

exports[`LayoutHelper should getActiveMenuItem(null) 1`] = `
Object {
  "title": "",
}
`;
